transit/src/main/resources/com/pixelduke/transit/base.css
/* ... */
.button, .toggle-button {
    -fx-border-color: transparent;
    -fx-border-width: 2;

    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-background-color: button_background_color;

    -fx-font-family: "Segoe UI";
    -fx-font-size: 1em; /* 12 */
    -fx-text-fill: text_color;
}

.button:hover,
.toggle-button:hover,
.button:focused:hover,
.toggle-button:focused:hover {
    -fx-border-color: border_hover_color;
}

.button:pressed, .toggle-button:pressed
{
    -fx-border-color: background_pressed_color;
    -fx-background-color: background_pressed_color;
}

.button:focused, .toggle-button:focused
{
    -fx-border-color: transparent, focus_ring_border_color;
    -fx-border-width: 1, 1;
    /*noinspection CssInvalidFunction*/
    -fx-border-style: solid, segments(1, 2);
    -fx-border-radius: 0, 0;
    -fx-border-insets: 1 1 1 1, 0;
}

.button:disabled, .button:default:disabled, .toggle-button:disabled
{
    -fx-opacity: 0.4;
    -fx-background-color: button_background_color;
    -fx-text-fill: text_color;
}

/****************************** Button ****************************************/

/* We must use the actual Button class instead of the "button" styleclass because ColorPicker also uses
that styleclass but isn't an actual button
*/
Button {
    -fx-skin: "com.pixelduke.control.skin.FXButtonSkin";
}

.button:default
{
    -fx-background-color: accent_color;
    -fx-text-fill: default_button_text_color;
}

.button:default:hover{
    -fx-border-color: border_hover_default_color;
}

.button:default:pressed {
    -fx-background-color: derive(accent_color, -40%);
}

/**************************** Toggle Button ***********************************/

.toggle-button {
    -fx-skin: "com.pixelduke.control.skin.FXToggleButtonSkin";
}

.toggle-button:selected {
    -fx-background-color: accent_color;
    -fx-text-fill: white;
}

.toggle-button:selected:hover {
    -fx-border-color: border_hover_selected_color;
}

.toggle-button:selected:pressed {
    -fx-background-color: derive(accent_color, -40%);
}

/*******************************************************************************
 *                                                                             *
 * Check Box                                                                   *
 *                                                                             *
 ******************************************************************************/

.check-box {
    -fx-text-fill: text_color;
}

.check-box > .box > .mark {
    -fx-shape: "M17.939,5.439L7.5,15.889l-5.439-5.449l0.879-0.879L7.5,14.111 l9.561-9.551L17.939,5.439z";

    -fx-pref-width: 16px;
    -fx-pref-height: 12px;

    -fx-background-color: transparent;
    -fx-background-insets: 0;
}

/* unselected */
.check-box > .box {
    -fx-background-color: box_background_color;
    -fx-background-insets: 0;
    -fx-background-radius: 0;

    -fx-border-color: box_border_color;
    -fx-border-width: 2px;
    -fx-border-style: solid;

    -fx-padding: 0.166667em 0px 0.166667em 0px;     /* 2 0 2 0 */
}

/* hover */
.check-box:hover > .box, .check-box:selected:hover > .box  {
    -fx-border-color: box_border_hover_color;
}

/* selected */
.check-box:selected > .box{
    -fx-background-color: accent_color;
    -fx-border-color: accent_color;
}

.check-box:selected > .box > .mark{
    -fx-background-color: white;
}

/* pressed */
.check-box:pressed > .box, .check-box:selected:pressed > .box
{
    -fx-background-color: #666666;
    -fx-border-color: #666666;
}

/* indeterminate */
.check-box:indeterminate > .box {
    -fx-padding: 3px;

    -fx-border-color: accent_color;
}

.check-box:indeterminate > .box > .mark {
    -fx-shape: null;

    -fx-pref-width: 10px;
    -fx-max-width: 10px;
    -fx-min-width: 10px;
    -fx-pref-height: 10px;
    -fx-max-height: 10px;
    -fx-min-height: 10px;

    -fx-background-color: indeterminate_mark_color;
    /*-fx-background-insets: 3px;*/
}

/* -- indeterminate - pressed */
.check-box:indeterminate:pressed > .box > .mark {
    -fx-background-color: #666666;
}

.check-box:indeterminate:pressed > .box {
    -fx-background-color: indeterminate_box_pressed_color;
    -fx-border-color: #666666;
}

/* focused */

.check-box:focused > .box{
    -fx-background-insets: 0;
    -fx-background-radius: 0;
    /* - first border is focus ring
       - second border is control border */
    -fx-border-color: focus_ring_color, box_border_color;
    -fx-border-width: 1, 2;
    /*noinspection CssInvalidFunction*/
    -fx-border-style: segments(1, 2), solid;
    -fx-border-insets: -3, 0;
}

/* -- focused - selected */
.check-box:focused:selected > .box{
    -fx-border-color: focus_ring_color, accent_color;
}

/* -- focused - selected, hover */
.check-box:focused:selected:hover > .box{
    -fx-border-color: focus_ring_color, box_border_hover_color;
}

/* -- focused - pressed */
.check-box:focused:pressed > .box{
    -fx-border-color: focus_ring_color, #666666;
}

.check-box:focused:selected:pressed > .box{
    -fx-border-color: focus_ring_color, #666666;
}

.check-box:focused:indeterminate:pressed > .box{
    -fx-border-color: focus_ring_color, #666666;
}

/* -- focused - indeterminate*/
.check-box:focused:indeterminate > .box {
    -fx-border-color: white, accent_color;
}

/* disabled */
.check-box:disabled {
    -fx-opacity: 0.4;
}

.check-box:disabled > .box {
    -fx-background-color: #cdcdcd;
    -fx-border-color: #aaa;
}
/* ... */

